fix: 增加悬赏问题

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,10 @@ CHAT_MODEL=gpt-3.5-turbo # 回答默认模型
 # 第一步：注册一下这个https://serper.dev（会送2500次，足够调试用了）
 # 第二步：去这里拷贝一下key https://serper.dev/api-key 填到下面即可
 SERPER_API_KEY= # 必填
+
+# 备注：一些测试key，你用的时候不一定还有余额
+# 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
+# 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
+# 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
+# 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
+# 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
