fix: 完善提示细节

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 # OpenAI配置
 API_KEY= # 必填
-BASE_URL= # 选填（代理URL）
+BASE_URL= # 选填（代理URL 例如 https://xxxxx/v1）
 CHAT_MODEL=gpt-3.5-turbo # 回答默认模型
 
 # Serper KEY 配置
